--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">XMLFlowsDemo</string>
+    <string name="app_name">StoreApp</string>
     <string name="title_activity_main2">MainActivity2</string>
 </resources>
